# eatf

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: README.md  ci.yml  publish-python.yml
cli/eatf-inspect/: README.md
cli/eatf-sign/: README.md  package-lock.json
cli/eatf-verify/: README.md  eatf-verify  package-lock.json
docs/: README.md  aep-profile.md  architecture.md  attestation-profile.md  design-rationale.md  glossary.md  threat-model.md
docs/legal/: disclosure-policy.md  framework-operations.md  project-sustainability-plan.md  threat-model.md
docs/specs/: aep-profile-v1.md  etsi-tr-aep-profile-draft.md  kratt-manifest.md  kratt-manifest.schema.json  mcp-attestation-profile-v1.md
docs/standards/: overt-1.0-conformance-readiness.md  overt-external-pre-review-packet.md  overt-iap-operating-pack.md  overt-level2-agentic-control-mapping.md  overt-profile-submission-pack.md  overt-review-feedback-register.md  overt-submission-decision-record.md
lib/: README.md  package-lock.json  package.json
lib-python/: README.md  pyproject.toml
lib-python/eatf_verifier/: __init__.py  tsa.py  verifier.py
lib/package/: README.md
schemas/: aep-v1.schema.json
scripts/: generate-invalid-vectors.mjs  package-lock.json  package.json
sdks/python-sdk/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
sdks/python-sdk/aletheia/: __init__.py  actions.py  agents.py  attestations.py  audit.py  client.py  compliance.py  config.py  delegation.py  evidence.py  exceptions.py  models.py  policies.py  verification.py
sdks/python-sdk/examples/: README.md  async_client.py  basic_usage.py  burokratt_kit.py  citizen_receipts.py  compliance_reporting.py  delegation_chains.py  opencourt_chain.py  partner_action_flow.py  school_compass.py
sdks/python-sdk/tests/: __init__.py  test_agents_ensure.py  test_client.py  test_evidence_offline.py
test-vectors/: README.md
(+21 files in other folders)
